--- a/react-oauth/package.json
+++ b/react-oauth/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
-    "recoil": "^0.7.3-alpha.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
