--- a/spring-oauth/build.gradle
+++ b/spring-oauth/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'com.google.api-client:google-api-client:1.30.10'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa',
             'org.springframework.boot:spring-boot-starter-security',
             'org.springframework.boot:spring-boot-starter-validation',
