--- a/spring-oauth/src/main/resources/application.yml
+++ b/spring-oauth/src/main/resources/application.yml
@@ -5,14 +5,8 @@ app:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1.;DB_CLOSE_ON_EXIT=FALSE;
     username: SA
     password:
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
-
-server:
-  servlet:
-    session:
-      cookie:
-        same-site: none
