--- a/spring-oauth/src/main/resources/application.yml
+++ b/spring-oauth/src/main/resources/application.yml
@@ -5,7 +5,7 @@ app:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:~/test;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
+    url: jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
     username: SA
     password:
   jpa:
